// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloReply) {}

  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloReply) {}
}

// 增加一个验证服务 token
service Authentication {
  rpc Authenticate (AuthRequest) returns (AuthReply) {}
}

// 验证请求
message AuthRequest {
  string username = 1;
  string password = 2;
}

// 验证回复
message AuthReply {
  bool success = 1;
  string message = 2;
}

// The request message containing the user's name.
// 请求参数
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
// 请求返回
message HelloReply {
  string message = 1;
}
